--- a/web/frontend/package.json
+++ b/web/frontend/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.8",
+    "vaul": "^1.1.2",
     "zod": "^3.24.3"
   },
   "devDependencies": {
